# C-VueJS

./: Makefile  build.bat  build.sh  project.pro  resources.qrc
cpp-server/: CMakeLists.txt
cpp-server/src/: backend.cpp  backend.h  drawings_handler.cpp  drawings_handler.h  main.cpp
vue-client/: package-lock.json  package.json  vue.config.js
vue-client/public/: index.html
vue-client/src/: App.vue  main.ts
vue-client/src/assets/human/: images.ts
vue-client/src/assets/icons/: addImg.vue  drawingImg.vue  settingsApp.vue
vue-client/src/assets/styles/: styles.scss
vue-client/src/components/: AlbumImageCard.vue  BackgroundAnimation.vue  DeleteConfirmModal.vue  DrawToolbar.vue  DrawingCanvas.vue  DrawingTools.vue  Header.vue  ImageCard.vue  ImageGallery.vue  ImageViewModal.vue  ReplayControls.vue  UploadModal.vue
vue-client/src/router/: index.ts
vue-client/src/views/: DrawView.vue  EditImageView.vue  HomeView.vue  ImageEditorView.vue
